# nookdb

./: .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: build-matrix.yml  ci.yml  crates-publish.yml  deprecate-broken-1.0.0.yml  docs-deploy.yml  install-smoke.yml  release.yml
benchmarks/: README.md  package.json  results.json  tsconfig.json
benchmarks/src/: runner.ts
benchmarks/src/cases/: count.bench.ts  find.bench.ts  insert.bench.ts  live.bench.ts  transaction.bench.ts
crates/nookdb-core/: Cargo.toml
crates/nookdb-core/src/: backup.rs  collection.rs  database.rs  error.rs  lib.rs  license_verify.rs  live.rs  migrate.rs  notify.rs  query.rs  storage.rs
crates/nookdb-core/src/codec/: doc.rs  mod.rs
crates/nookdb-core/src/index/: engine.rs  mod.rs
crates/nookdb-core/src/schema/: ir.rs  mod.rs  validate.rs
crates/nookdb-core/tests/: array_field_codec.rs  array_field_index_rejected.rs  backup_atomic_write.rs  backup_roundtrip.rs  backup_schema_hash.rs  backup_seam.rs  backup_target_not_empty.rs  crash_safety.rs  license_verify_no_network.rs  m3_notifier_seam.rs  m5a_schema_hash_matches_m4_handshake.rs  migrate_concurrent.rs  proptest_storage.rs
crates/nookdb-napi/: .npmignore  Cargo.toml  README.md  package.json
crates/nookdb-napi/src/: backup.rs  database.rs  error.rs  lib.rs  live.rs
crates/nookdb-napi/tests/: tx_primitives.rs
docs/: .gitignore  astro.config.mjs  package.json  tsconfig.json
docs/src/components/: AiReady.astro  ArchitectureDiagram.astro  ArchitectureDiagramInline.astro  BenchmarksStrip.astro  DurabilityBand.astro  FAQ.astro  FeatureExplorer.astro  HeroRepl.astro  HeroSection.astro  InstallCTA.astro  MigrationBand.astro  QuoteBand.astro  RoadmapTimeline.astro  SiteFooter.astro  SiteHeader.astro  StatsBand.astro  StoryCardBridge.astro  StoryCardLive.astro  StoryCardSchema.astro  TimelineBand.astro  WhenToUse.astro  WordmarkLockup.astro
docs/src/lib/: build-log.ts  copy.ts
docs/src/pages/: 404.astro  index.astro  llms-full.txt.ts  llms.txt.ts
docs/src/scripts/: copy-install.ts  hero-repl.ts  reveal.ts  stats-band.ts  story-cards.ts  story-live.ts  timeline-band.ts
examples/: .gitignore
examples/electron-notes/: README.md  index.html  package.json  tsconfig.json
examples/electron-todo/: README.md  electron.vite.config.ts  index.html  package.json
examples/migrate-from-sehawq-v5/: README.md  convert.ts  package.json  sehawq-fixture.json
scripts/: smoke-import.mjs
(+37 files in other folders)
