[package]
name = "nookdb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core engine for Nook — a schema-first, reactive local-first database for Electron."

[lib]
name = "nookdb_core"
path = "src/lib.rs"

[dependencies]
thiserror = "1"
base64ct = { version = "1", features = ["std"] }
crc32fast = "1"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
redb = "2"
regex = { version = "1", default-features = false, features = ["std", "perf-dfa"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"                            # NEW — S1 schema_hash hasher

[dev-dependencies]
tempfile = "3"
proptest = "1"
serial_test = "3"
rand_core = { version = "0.6", features = ["std"] }

[lints]
workspace = true
